--- a/lectures/01-intro/intro.ipynb
+++ b/lectures/01-intro/intro.ipynb
@@ -28,12 +28,12 @@
     "\n",
     "* People (scientists, goverment, health professionals, companies) collect data in order to answer certain questions. Statisticians's job is to help them extract knowledge and insights from data. \n",
     "\n",
-    "* Must-read for statistics students:  \n",
-    "  - [_50 years of data sicence_](../readings/Donoho15FiftyYearsDataScience.pdf), by David Donoho.\n",
+    "* Must-read for students of statistics:  \n",
+    "  - [_50 years of data sicence_](../../readings/Donoho15FiftyYearsDataScience.pdf), by David Donoho.\n",
     "  - [_Data Science: An Artificial Ecosystem_](https://hdsr.mitpress.mit.edu/pub/jhy4g6eg), by Xiao-Li Meng \n",
     "  - ... and the every article of the inaugural issue of the [_Havard Data Science Review_](https://hdsr.mitpress.mit.edu)\n",
     "\n",
-    "* If existing software tools readily solve the problem, use them.\n",
+    "* If existing software tools readily solve the problem, **use them**.\n",
     "\n",
     "* Often statisticians need to implement their own methods, test new algorithms, or tailor classical methods to new types of data (big, streaming). \n",
     "\n",
@@ -98,22 +98,22 @@
    "source": [
     "## Acknowledgment\n",
     "\n",
-    "This lecture note is based on [Dr. Hua Zhou](http://hua-zhou.github.io)'s 2019 Winter Statistical Computing course notes available at <http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html>."
+    "This lecture note has evolved from [Dr. Hua Zhou](http://hua-zhou.github.io)'s 2019 Winter Statistical Computing course notes available at <http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html>."
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.6.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.6.2"
   },
   "livereveal": {
    "scroll": true,
