--- a/lectures/02-juliaintro/jupyter.ipynb
+++ b/lectures/02-juliaintro/jupyter.ipynb
@@ -4,44 +4,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter Notebook, Jupyter Lab, and JuliaBox"
+    "# Jupyter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Jupyter Notebook\n",
+    "## Jupyter \n",
     "\n",
     "* IPython notebook (precursor of Jupyter notebook) is a powerful tool for authoring dynamic document in Python, which combines code, formatted text, math, and multimedia in a single document.  \n",
     "\n",
     "* [Jupyter](http://jupyter.org) is the current development that emcompasses multiple languages including **Ju**lia, **Pyt**hon, and **R**. \n",
     "\n",
-    "* Julia uses Jupyter notebook through the [IJulia.jl](https://github.com/JuliaLang/IJulia.jl) package.\n",
+    "* In this course, you are required to write your homework reports using [Jupyter Lab](https://jupyter.org/install.html).\n",
     "\n",
-    "* In this course, you are required to write your homework reports using IJulia.\n",
+    "* You can use Julia in Jupyter notebook through the [IJulia.jl](https://github.com/JuliaLang/IJulia.jl) package.\n",
     "\n",
-    "* For each homework, you need to submit your IJulia notebook (.e.g, `hw1.ipynb`), html (e.g., `hw1.html`), along with all code and data that are necessary to reproduce the results.\n",
+    "* For each homework, you need to submit your notebook (.e.g, `hw1.ipynb`), html (e.g., `hw1.html`), along with all code and data that are necessary to reproduce the results.\n",
     "\n",
-    "* You can start with the Jupyter notebook for the lectures.  "
+    "* You can start with this notebook file."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Installation\n",
+    "### Anaconda\n",
     "\n",
-    "Installing the IJulia.jl package will install a minimal Python/Jupyter distribution that is private to Julia.\n",
-    "```julia\n",
-    "using Pkg\n",
-    "Pkg.add(\"IJulia\")\n",
+    "- [Anaconda](https://www.anaconda.com) is a distribution of the Python and R programming languages for scientific computing, that aims to simplify package management and deployment. The distribution includes data-science packages suitable for Windows, Linux, and macOS. [[Wikipedia](https://en.wikipedia.org/wiki/Anaconda_(Python_distribution))]\n",
+    "\n",
+    "- Go to https://www.anaconda.com/products/individual and clike \"Download\" to install the Anaconda.\n",
+    "\n",
+    "- From [Anaconda Navigator](https://docs.anaconda.com/anaconda/navigator/index.html), use can launch Jupyter Lab.\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/f4/Anaconda.Starting_page.png\" align=\"center\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IJulia\n",
+    "\n",
+    "Install IJulia from the Julia REPL by pressing ] to enter pkg mode and entering:\n",
     "```\n",
-    "We can also tell IJulia to use a Jupyter program already installed in our system:\n",
-    "```julia\n",
-    "ENV[\"JUPYTER\"] = \"path_to_jupyter_executable\"\n",
-    "Pkg.build(\"IJulia\")\n",
-    "```"
+    "add IJulia\n",
+    "```\n",
+    "\n",
+    "If you already have Jupyter installed on your machine, this process will also install a kernel specification that tells Jupyter how to launch Julia. "
    ]
   },
   {
@@ -49,18 +60,6 @@
    "metadata": {},
    "source": [
     "### Usage\n",
-    "\n",
-    "* We can invoke Jupyter notebook within Julia by\n",
-    "```julia\n",
-    "using IJulia\n",
-    "notebook() # using home as working directory \n",
-    "```\n",
-    "or, using current directory as the working directory, by\n",
-    "```julia\n",
-    "notebook(dir=pwd()) # using current directory as working directory \n",
-    "```\n",
-    "\n",
-    "* Notebook can be stopped by hitting `Ctrl+c` in Julia REPL.\n",
     "\n",
     "* Useful to know some keyboard shortcuts. I frequently use\n",
     "    * `shift + return`: execute current cell. \n",
@@ -70,15 +69,7 @@
     "    * `m`: change cell to Markdown.  \n",
     "    Check more shortcuts in menu `Help` -> `Keyboard Shortcuts`.\n",
     "\n",
-    "* **Notebook extensions** offer many utilities for productivity. They can be installed by\n",
-    "```julia\n",
-    "#Pkg.add(\"Conda\")\n",
-    "using Conda\n",
-    "Conda.add_channel(\"conda-forge\")\n",
-    "Conda.add(\"jupyter_contrib_nbextensions\")\n",
-    "```\n",
-    "\n",
-    "* Notebook can be **converted to other formats** such as html, LaTeX, Markdown, Julia code, and many others, via menu `File` -> `Download as`. For your homework, please submit both notebook (ipynb) and html.\n",
+    "* Notebook can be **converted to other formats** such as html, LaTeX, Markdown, Julia code, and many others, via menu `File` -> `Download as`. \n",
     "\n",
     "* **Mathematical formula** can can be typeset as LaTeX in Markdown cells. For example, inline math: $e^{i \\pi} + 1 = 0$ and displayed math\n",
     "$$\n",
@@ -89,26 +80,7 @@
     "    e^x &=& \\sum_{i=0}^\\infty \\frac{1}{i!} x^i \\\\\n",
     "    &\\approx& 1 + x + \\frac{x^2}{2}.\n",
     "\\end{eqnarray*}\n",
-    "\n",
-    "* If you have a lot of commonly used LaTeX macros, put them in a `.tex` file and load them using the notebook extension `Load TeX macros`. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## JupyterLab\n",
-    "\n",
-    "JupyterLab (more IDE-like) is supposed to replace Jupyter Notebook after it reaches v1.0.\n",
-    "\n",
-    "To invoke JupyterLab:\n",
-    "```julia\n",
-    "jupyterlab() # use home as working directory\n",
-    "```\n",
-    "or\n",
-    "```julia\n",
-    "jupyterlab(dir=pwd()) # use current directory as working directory\n",
-    "```"
+    "\n"
    ]
   },
   {
@@ -117,21 +89,21 @@
    "source": [
     "## Acknowledgment\n",
     "\n",
-    "This lecture note is based on [Dr. Hua Zhou](http://hua-zhou.github.io)'s 2019 Spring Statistical Computing course notes available at <http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html>."
+    "This lecture note has evolved from [Dr. Hua Zhou](http://hua-zhou.github.io)'s 2019 Spring Statistical Computing course notes available at <http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html>."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.6.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.6.2"
   },
   "toc": {
    "colors": {
