fix link to Julia packages

--- a/lectures/02-juliaintro/juliaintro1.ipynb
+++ b/lectures/02-juliaintro/juliaintro1.ipynb
@@ -965,7 +965,7 @@
     "* Each Julia package is a Git repository. Each Julia package name ends with `.jl`. E.g., `Distributions.jl` package lives at <https://github.com/JuliaStats/Distributions.jl>.   \n",
     "Google search with `PackageName.jl` usually leads to the package on github.com. \n",
     "\n",
-    "* The package ecosystem is rapidly maturing; a complete list of **registered** packages (which are required to have a certain level of testing and documentation) is at [http://pkg.julialang.org/](http://pkg.julialang.org/).\n",
+    "* The package ecosystem is rapidly maturing; a complete list of **registered** packages (which are required to have a certain level of testing and documentation) is at https://julialang.org/packages/ \n",
     "\n",
     "* For example, the package called `Distributions.jl` is added with\n",
     "```julia\n",
