--- a/hw/hw1/hw01.ipynb
+++ b/hw/hw1/hw01.ipynb
@@ -80,35 +80,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Explain what the above function does."
+    "1) Explain what the above function does."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Write R code that generate a sample from $f$ of size 10,000 with a thinning of 500 **and** measure the time. Your R code should be a one-line. Run your code in Julia using the `RCall.jl` package."
+    "2) Write R code that generate a sample from $f$ of size 10,000 with a thinning of 500 **and** measure the time. Your R code should be a one-line. Run your code in Julia using the `RCall.jl` package."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Write a Julia function `jgibbs()` that does the same compuation as `Rgibbs()`. (*Hint*. use `Distributions.jl`)"
+    "3) Write a Julia function `jgibbs()` that does the same compuation as `Rgibbs()`. (*Hint*. use `Distributions.jl`)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Run `jgibbs(100, 5)` and then repeat problem 2 for `jgibbs()`. How long does it take? Why do you run `jgibbs(100, 5)` before measuring the time?"
+    "4) Run `jgibbs(100, 5)` and then repeat problem 2 for `jgibbs()`. How long does it take? Why do you run `jgibbs(100, 5)` before measuring the time?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Compare the speed of `Rgibbs()` and `jgibbs()`. Also compare the programming efforts."
+    "5) Compare the speed of `Rgibbs()` and `jgibbs()`. Also compare the programming efforts."
    ]
   },
   {
@@ -126,28 +126,28 @@
     "    k\n",
     "end\n",
     "```\n",
-    "1. Use `@code_llvm` to find the LLVM bytecode of compiled `g(2)`."
+    "1) Use `@code_llvm` to find the LLVM bytecode of compiled `g(2)`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Use `@code_llvm` to find the LLVM bytecode of compiled `g(2.0)`."
+    "2) Use `@code_llvm` to find the LLVM bytecode of compiled `g(2.0)`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Compare the bytecode from questions 1 and 2. What do you find?  "
+    "3) Compare the bytecode from questions 1 and 2. What do you find?  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Repeat questions 1-3 with `@code_native`. What is the difference from `@code_llvm`?"
+    "4) Repeat questions 1-3 with `@code_native`. What is the difference from `@code_llvm`?"
    ]
   },
   {
@@ -167,35 +167,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. How many floating-point numbers are there? "
+    "1) How many floating-point numbers are there? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. What is the smallest positive number?"
+    "2) What is the smallest positive number?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. What is the smallest number larger than 1? "
+    "3) What is the smallest number larger than 1? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. What is the smallest number $X$, such that $X + 1 = X$? Assume the round to nearest, ties to even rule."
+    "4) What is the smallest number $X$, such that $X + 1 = X$? Assume the round to nearest, ties to even rule."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Suppose $p=4$ and $b=2$ (and $e_{\\min}$ is very small and $e_{\\max}$ is very large). What is the next number after 20 in this number system?"
+    "5) Suppose $p=4$ and $b=2$ (and $e_{\\min}$ is very small and $e_{\\max}$ is very large). What is the next number after 20 in this number system?"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Compare Algorithms 1 and 2. Which algoritm is more likely to end up with catastrophic cancellation?"
+    "1) Compare Algorithms 1 and 2. Which algoritm is more likely to end up with catastrophic cancellation?"
    ]
   },
   {
@@ -266,21 +266,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Show that Algorithm 3 correctly computes the sum of squares."
+    "2) Show that Algorithm 3 correctly computes the sum of squares."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Compare Algorithm 3 with Algorithms 1 and 2."
+    "3) Compare Algorithm 3 with Algorithms 1 and 2."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Write a Julia function `wsos(x; w)` that computes the weighted sum of squares $\\sum_{i=1^n}w_i(x_i - \\bar{x})^2$ in a similar way to Algorithm 3. Here, `x` is an array of numbers, and `w` is an array of positive weights."
+    "4) Write a Julia function `wsos(x; w)` that computes the weighted sum of squares $\\sum_{i=1^n}w_i(x_i - \\bar{x})^2$ in a similar way to Algorithm 3. Here, `x` is an array of numbers, and `w` is an array of positive weights."
    ]
   }
  ],
