--- a/lectures/04-algo/algo.ipynb
+++ b/lectures/04-algo/algo.ipynb
@@ -2,18 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia Version 1.6.2\n",
+      "Commit 1b93d53fc4 (2021-07-14 15:36 UTC)\n",
+      "Platform Info:\n",
+      "  OS: macOS (x86_64-apple-darwin18.7.0)\n",
+      "  CPU: Intel(R) Core(TM) i5-8279U CPU @ 2.40GHz\n",
+      "  WORD_SIZE: 64\n",
+      "  LIBM: libopenlibm\n",
+      "  LLVM: libLLVM-11.0.1 (ORCJIT, skylake)\n"
+     ]
+    }
+   ],
    "source": [
     "versioninfo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n",
+      " \u001b[90m [7d9fca2a] \u001b[39mArpack v0.5.3\n",
+      " \u001b[90m [6e4b80f9] \u001b[39mBenchmarkTools v1.1.4\n",
+      " \u001b[90m [1e616198] \u001b[39mCOSMO v0.8.1\n",
+      " \u001b[90m [f65535da] \u001b[39mConvex v0.14.13\n",
+      " \u001b[90m [a93c6f00] \u001b[39mDataFrames v1.2.2\n",
+      " \u001b[90m [31c24e10] \u001b[39mDistributions v0.24.18\n",
+      " \u001b[90m [e2685f51] \u001b[39mECOS v0.12.3\n",
+      " \u001b[90m [f6369f11] \u001b[39mForwardDiff v0.10.19\n",
+      " \u001b[90m [28b8d3ca] \u001b[39mGR v0.58.1\n",
+      " \u001b[90m [c91e804a] \u001b[39mGadfly v1.3.3\n",
+      " \u001b[90m [bd48cda9] \u001b[39mGraphRecipes v0.5.7\n",
+      " \u001b[90m [82e4d734] \u001b[39mImageIO v0.5.8\n",
+      " \u001b[90m [6218d12a] \u001b[39mImageMagick v1.2.1\n",
+      " \u001b[90m [916415d5] \u001b[39mImages v0.24.1\n",
+      " \u001b[90m [b6b21f68] \u001b[39mIpopt v0.7.0\n",
+      " \u001b[90m [42fd0dbc] \u001b[39mIterativeSolvers v0.9.1\n",
+      " \u001b[90m [4076af6c] \u001b[39mJuMP v0.21.9\n",
+      " \u001b[90m [b51810bb] \u001b[39mMatrixDepot v1.0.4\n",
+      " \u001b[90m [1ec41992] \u001b[39mMosekTools v0.9.4\n",
+      " \u001b[90m [76087f3c] \u001b[39mNLopt v0.6.3\n",
+      " \u001b[90m [47be7bcc] \u001b[39mORCA v0.5.0\n",
+      " \u001b[90m [a03496cd] \u001b[39mPlotlyBase v0.4.3\n",
+      " \u001b[90m [f0f68f2c] \u001b[39mPlotlyJS v0.15.0\n",
+      " \u001b[90m [91a5bcdd] \u001b[39mPlots v1.21.2\n",
+      " \u001b[90m [438e738f] \u001b[39mPyCall v1.92.3\n",
+      " \u001b[90m [d330b81b] \u001b[39mPyPlot v2.9.0\n",
+      " \u001b[90m [dca85d43] \u001b[39mQuartzImageIO v0.7.3\n",
+      " \u001b[90m [6f49c342] \u001b[39mRCall v0.13.12\n",
+      " \u001b[90m [ce6b1742] \u001b[39mRDatasets v0.7.5\n",
+      " \u001b[90m [c946c3f1] \u001b[39mSCS v0.7.1\n",
+      " \u001b[90m [276daf66] \u001b[39mSpecialFunctions v1.6.1\n",
+      " \u001b[90m [2913bbd2] \u001b[39mStatsBase v0.33.10\n",
+      " \u001b[90m [b8865327] \u001b[39mUnicodePlots v2.0.1\n",
+      " \u001b[90m [0f1e0344] \u001b[39mWebIO v0.8.15\n",
+      " \u001b[90m [8f399da3] \u001b[39mLibdl\n",
+      " \u001b[90m [2f01184e] \u001b[39mSparseArrays\n",
+      " \u001b[90m [10745b16] \u001b[39mStatistics\n"
+     ]
+    }
+   ],
    "source": [
     "using Pkg\n",
     "Pkg.activate(\"../..\")\n",
@@ -78,9 +145,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 301 samples with 1 evaluation.\n",
+       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m12.038 ms\u001b[22m\u001b[39m … \u001b[35m27.045 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 15.52%\n",
+       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m15.712 ms              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
+       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m16.599 ms\u001b[22m\u001b[39m ± \u001b[32m 3.089 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m3.23% ±  6.41%\n",
+       "\n",
+       "  \u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m \u001b[39m \u001b[39m▂\u001b[39m \u001b[39m▂\u001b[39m \u001b[39m▂\u001b[39m█\u001b[39m▃\u001b[39m▁\u001b[39m \u001b[39m▄\u001b[39m \u001b[34m▄\u001b[39m\u001b[39m▂\u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
+       "  \u001b[39m▄\u001b[39m▃\u001b[39m▄\u001b[39m█\u001b[39m▆\u001b[39m▆\u001b[39m█\u001b[39m▅\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m▆\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▆\u001b[39m▅\u001b[32m▅\u001b[39m\u001b[39m▆\u001b[39m▆\u001b[39m▄\u001b[39m▃\u001b[39m▃\u001b[39m▄\u001b[39m▇\u001b[39m▃\u001b[39m▅\u001b[39m▆\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m▅\u001b[39m▆\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▃\u001b[39m▃\u001b[39m▅\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▆\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▄\u001b[39m▁\u001b[39m▃\u001b[39m▃\u001b[39m \u001b[39m▄\n",
+       "  12 ms\u001b[90m           Histogram: frequency by time\u001b[39m        24.7 ms \u001b[0m\u001b[1m<\u001b[22m\n",
+       "\n",
+       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m7.64 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m3\u001b[39m."
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using BenchmarkTools, Random\n",
     "\n",
@@ -96,9 +183,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 10000 samples with 1 evaluation.\n",
+       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m275.552 μs\u001b[22m\u001b[39m … \u001b[35m 4.424 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 92.43%\n",
+       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m288.479 μs              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
+       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m318.128 μs\u001b[22m\u001b[39m ± \u001b[32m73.509 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.13% ±  0.92%\n",
+       "\n",
+       "  \u001b[39m \u001b[39m▆\u001b[39m█\u001b[34m▆\u001b[39m\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[32m▂\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\n",
+       "  \u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▆\u001b[39m▅\u001b[39m▅\u001b[39m \u001b[39m█\n",
+       "  276 μs\u001b[90m        \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m       527 μs \u001b[0m\u001b[1m<\u001b[22m\n",
+       "\n",
+       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m15.88 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m2\u001b[39m."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# complexity is n^2 + n^2 = O(n^2)\n",
     "@benchmark $A * ($B * $x)"
@@ -124,9 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia Version 1.6.2\n",
+      "Commit 1b93d53fc4 (2021-07-14 15:36 UTC)\n",
+      "Platform Info:\n",
+      "  OS: macOS (x86_64-apple-darwin18.7.0)\n",
+      "  CPU: Intel(R) Core(TM) i5-8279U CPU @ 2.40GHz\n",
+      "  WORD_SIZE: 64\n",
+      "  LIBM: libopenlibm\n",
+      "  LLVM: libLLVM-11.0.1 (ORCJIT, skylake)\n"
+     ]
+    }
+   ],
    "source": [
     "versioninfo()"
    ]
@@ -146,9 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4744965532793915e11"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using LinearAlgebra\n",
     "\n",
@@ -220,15 +353,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.6.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.6.2"
   },
   "toc": {
    "colors": {
