update on condition number

--- a/lectures/04-algo/algo.ipynb
+++ b/lectures/04-algo/algo.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "* Difference of $O(n^2)$ and $O(n\\log n)$ on massive data. Suppose we have a teraflops supercomputer capable of doing $10^{12}$ flops per second. For a problem of size $n=10^{12}$, $O(n \\log n)$ algorithm takes about \n",
     "$$10^{12} \\log (10^{12}) / 10^{12} \\approx 27 \\text{ seconds}.$$ \n",
-    "$O(n^2)$ algorithm takes about $10^{12}$ seconds, which is approximately 31710 years!\n",
+    "$O(n^2)$ algorithm takes about $10^{24}/10^{12} = 10^{12}$ seconds, which is approximately 31710 years!\n",
     "\n",
     "* QuickSort and Fast Fourier Transform (invented by John Tukey) are celebrated algorithms that turn $O(n^2)$ operations into $O(n \\log n)$. Another example is the Strassen's method for matrix multiplication, which turns $O(n^3)$ matrix multiplication into $O(n^{\\log_2 7})$.    \n",
     "\n",
@@ -226,7 +226,7 @@
     "\n",
     "* **FLOPS**. \n",
     "\n",
-    "* For example, my laptop has the Intel i5-6267U (Skylake) CPU with 2 cores runing at 2.90 GHz (cycles per second)."
+    "* For example, my laptop has the Intel i5-8279U (Coffee Lake) CPU with 4 cores runing at 2.4 GHz (cycles per second)."
    ]
   },
   {
@@ -257,13 +257,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intel Skylake CPUs can do 16 double-precision flops per cylce and 32 single-precision flops per cycle. Then the **theoretical throughput** of my laptop is\n",
-    "$$ 2 \\times 2.9 \\times 10^9 \\times 16 = 92.8 \\text{ GFLOPS DP} $$\n",
+    "Intel Coffee Lake CPUs can do 16 double-precision flops per cycle and 32 single-precision flops per cycle. Then the **theoretical throughput** of my laptop is\n",
+    "$$ 4 \\times 2.4 \\times 10^9 \\times 16 = 153.6  \\text{ GFLOPS} $$\n",
     "in double precision and\n",
-    "$$ 2 \\times 2.9 \\times 10^9 \\times 32 = 185.6 \\text{ GFLOPS SP} $$\n",
+    "$$ 4 \\times 2.4 \\times 10^9 \\times 32 = 307.2  \\text{ GFLOPS} $$\n",
     "in single precision. \n",
     "\n",
-    "* In Julia, computes the peak flop rate of the computer by using double precision `gemm!`"
+    "* In Julia, `LinearAlgebra.peakflops()` computes the peak flop rate of the computer by using `gemm!` (double precision  matrix-matrix multiplication)."
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which is about 78.4 GFLOTS DP."
+    "which is about 147.4 GFLOPS DP."
    ]
   },
   {
@@ -301,53 +301,90 @@
    "source": [
     "## Stability of numerical algorithms\n",
     "\n",
-    "* Abstractly, a *problem* can be viewed as function $f: X \\to Y$ where $X$ is a normed vector space of data and $Y$ is a normed vector space of solutions.\n",
-    "    - The problem of solving $Ax=b$ for fixed $b$ is $f: A \\mapsto A^{-1}b$ with $X=\\{M\\in\\mathbb{R}^{n\\times n}: M \\text{ is invertible} \\}$ and $Y = \\mathbb{R}^n$.\n",
+    "* Recall that abstractly, a *problem* can be viewed as function $f: \\mathcal{X} \\to \\mathcal{Y}$ where $\\mathcal{X}$ is a normed vector space of data and $\\mathcal{Y}$ is a normed vector space of solutions.\n",
+    "\\\n",
+    "For given data $x \\in \\mathcal{X}$, the true solution of the problem $f$ is $y = f(x) \\in \\mathcal{Y}$. \n",
+    "    - The problem of solving $Ax=b$ for fixed $b$ is $f: A \\mapsto A^{-1}b$ with $\\mathcal{X}=\\{M\\in\\mathbb{R}^{n\\times n}: M \\text{ is invertible} \\}$ and $\\mathcal{Y} = \\mathbb{R}^n$.\n",
+    "\n",
     "    \n",
-    "* An *algorithm* can be viewed as another map $\\tilde{f}: X \\to Y$.\n",
+    "* An *algorithm* can be viewed as another map $\\tilde{f}: \\mathcal{X} \\to \\mathcal{Y}$.\n",
+    "\\\n",
+    "For given data $x \\in \\mathcal{X}$, the solution **computed** by algorithm $\\tilde{f}$ is $\\hat{y} = \\tilde{f}(x) \\in \\mathcal{Y}$. \n",
     "    - Example 1: solve $Ax=b$ by GEPP followed by forward and backward substitutions on a digital computer.\n",
     "    - Example 2: solve $Ax=b$ by Gauss-Seidel (an iterative method to come) on a digital computer.\n",
-    "    - In both cases, the solutions (in $Y$) are not the same as $A^{-1}b$!\n",
+    "    - In both cases, the solutions (in $\\mathcal{Y}$) are not the same as $A^{-1}b$!\n",
+    "        + We'll learn about these algorithms soon.\n",
     "    - Algorithms will be affected by at least rounding errors.\n",
+    "    \n",
+    "* It is not necessarily true that $\\hat{y} = y$, or $\\tilde{f}(x) = f(x)$. The forward error of a computed solution is the relative error\n",
+    "$$\n",
+    "    \\frac{\\Vert \\tilde{f}(x) - f(x) \\Vert}{\\Vert f(x) \\Vert}\n",
+    "    .\n",
+    "$$\n",
     "    \n",
     "* Algorithm $\\tilde{f}$ is said *stable* if\n",
     "$$\n",
-    "    \\forall x \\in X, \n",
-    "    \\exists \\tilde{x} \\in X \\text{ such that }\n",
-    "    \\frac{\\|\\tilde{x} - x\\|}{\\|x\\|} = O(\\epsilon_{\\max})\n",
+    "    \\forall x \\in \\mathcal{X}, \n",
+    "    \\exists \\tilde{x} \\in \\mathcal{X} \\text{ such that }\n",
+    "    \\frac{\\|\\tilde{x} - x\\|}{\\|x\\|} = O(\\epsilon)\n",
     "    \\implies\n",
-    "    \\frac{\\|\\tilde{f}(\\tilde{x}) - f(\\tilde{x})\\|}{\\|f(\\tilde{x})\\|} = O(\\epsilon_{\\max})\n",
+    "    \\frac{\\|\\tilde{f}(x) - f(\\tilde{x})\\|}{\\|f(\\tilde{x})\\|} = O(\\epsilon)\n",
+    "    ,\n",
+    "    \\quad\n",
+    "    \\text{as}~ \\epsilon \\to 0\n",
     "    .\n",
     "$$\n",
     "In words, a stable algorithm gives \"nearly the right\" answer to a \"slightly wrong\" question.\n",
     "\n",
     "* Backward stability: algorithm $\\tilde{f}$ is said *backward stable* if\n",
     "$$\n",
-    "    \\forall x \\in X, \n",
-    "    \\exists \\tilde{x} \\in X \\text{ such that }\n",
-    "    \\frac{\\|\\tilde{x} - x\\|}{\\|x\\|} = O(\\epsilon_{\\max})\n",
+    "    \\forall x \\in \\mathcal{X}, \n",
+    "    \\exists \\tilde{x} \\in \\mathcal{X} \\text{ such that }\n",
+    "    \\frac{\\|\\tilde{x} - x\\|}{\\|x\\|} = O(\\epsilon)\n",
     "    \\implies\n",
     "    \\tilde{f}(x) = f(\\tilde{x})\n",
-    "    .\n",
+    "    ,\n",
+    "    \\quad\n",
+    "    \\text{as}~ \\epsilon \\to 0\n",
     "$$\n",
     "In words, a backward stable algorithm gives \"exactly the right\" answer to a \"slightly wrong\" question.\n",
+    "    - Backward stability implies stability, but not the other way around.\n",
+    "\n",
+    "* If a backward stable algorithm $\\tilde{f}$ is applied to solve a problem $f$, the forward error of $\\tilde{f}$ is bounded by the condition number of problem $f$. \n",
+    "\\\n",
+    "\\\n",
+    "To see this, recall the definition of the condition number \n",
+    "$$\n",
+    "    \\kappa = \\lim_{\\delta\\to 0}\\sup_{\\|\\tilde{x} - x\\|\\le \\delta \\Vert x \\Vert}\\frac{\\|f(\\tilde{x}) - f(x)\\|/\\|f(x)\\|}{\\|\\tilde{x} - x\\|/\\|x\\|}\n",
+    "    .\n",
+    "$$\n",
+    "Thus for $\\tilde{x} \\in \\mathcal{X}$ such that $\\frac{\\Vert\\tilde{x} - x\\Vert}{\\Vert x \\Vert} = O(\\epsilon)$ and $\\tilde{f}(x) = f(\\tilde{x})$  as $\\epsilon \\to 0$, we have\n",
+    "$$\n",
+    "    \\frac{\\|\\tilde{f}(x) - f(x)\\|}{\\|f(x)\\|} \\le ( \\kappa + o(1) )\\frac{\\|\\tilde{x} - x\\|}{\\|x\\|}\n",
+    "    = O(\\kappa \\epsilon)\n",
+    "    .\n",
+    "$$\n",
+    "\n",
+    "\n",
     "\n",
     "* Examples\n",
     "    - Computing the inner product $x^Ty$ of vectors $x$ snd $y$ using by $[\\sum_{i=1}^n [[x_i][y_i]]]$ (in IEEE754) is backward stable.\n",
     "    - Computing the inner product $A=xy^T$ of vectors $x$ snd $y$ using by $A_{ij}=[[x_i][y_i]]$ (in IEEE754) is  stable but *not* backward stable.\n",
     "    \n",
-    "* It can be shown that if a backward stable algorithm $\\tilde{f}$ is applied to solve a problem $f$, the accuarcy of $\\tilde{f}$ is bounded by the condition number of problem $f$.\n",
-    "\n",
-    "* (Backward) Stability a property of an algorithm, whereas conditioning is a property of a problem."
+    "* **(Backward) Stability a property of an algorithm, whereas conditioning is a property of a problem.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Reading\n",
+    "\n",
+    "[What is Numerical Stability?](https://nhigham.com/2020/08/04/what-is-numerical-stability/) by Nick Higham\n",
+    "\n",
     "## Acknowledgment\n",
     "\n",
-    "Many parts of this lecture note are based on [Dr. Hua Zhou](http://hua-zhou.github.io)'s 2019 Spring Statistical Computing course notes available at <http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html>."
+    "This lecture note has evolved from [Dr. Hua Zhou](http://hua-zhou.github.io)'s 2019 Spring Statistical Computing course notes available at <http://hua-zhou.github.io/teaching/biostatm280-2019spring/index.html>."
    ]
   }
  ],
