--- a/lectures/03-arith/arith.ipynb
+++ b/lectures/03-arith/arith.ipynb
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
        " 1.000000000000333"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2093,7 @@
        "  3.000000000000333"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2132,7 +2132,7 @@
        " -1.000000000000333"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2145,7 +2145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In other words, an input perturbation of order $10^{-3}$ yield an output perturbation of order $10^0$. Thats 3 orders of magnutides of relative change!\n",
+    "In other words, an input perturbation of order $10^{-3}$ yield an output perturbation of order $10^0$. Thats 3 orders of magnutide of relative change!\n",
     "\n",
     "Floating point representation $[x]$ of a real number $x$ in a digital computer may introduce such input perturbation easily. The perturbation of output of a problem with respect to the input is called *conditioning*."
    ]
@@ -2244,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2253,7 +2253,7 @@
        "3611.5557231115513"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
