--- a/hw/hw1/hw01.ipynb
+++ b/hw/hw1/hw01.ipynb
@@ -160,7 +160,7 @@
     "$$\n",
     "    \\pm 0.d_1d_2\\dotsb d_p \\times b^e\n",
     "$$\n",
-    "with $e_{\\min} \\leq e \\leq e_{\\max}$. "
+    "with $e_{\\min} \\leq e \\leq e_{\\max}$. Assume that $d_1 \\neq 0$."
    ]
   },
   {
