--- a/lectures/07-gelu/gelu.ipynb
+++ b/lectures/07-gelu/gelu.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Julia Version 1.4.0\n",
-      "Commit b8e9a9ecc6 (2020-03-21 16:36 UTC)\n",
+      "Julia Version 1.6.2\n",
+      "Commit 1b93d53fc4 (2021-07-14 15:36 UTC)\n",
       "Platform Info:\n",
-      "  OS: macOS (x86_64-apple-darwin18.6.0)\n",
+      "  OS: macOS (x86_64-apple-darwin18.7.0)\n",
       "  CPU: Intel(R) Core(TM) i5-8279U CPU @ 2.40GHz\n",
       "  WORD_SIZE: 64\n",
       "  LIBM: libopenlibm\n",
-      "  LLVM: libLLVM-8.0.1 (ORCJIT, skylake)\n"
+      "  LLVM: libLLVM-11.0.1 (ORCJIT, skylake)\n"
      ]
     }
    ],
@@ -33,27 +33,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Dropbox/class/M1399.000200/2020/Project.toml`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mStatus\u001b[22m\u001b[39m `~/Dropbox/class/M1399.000200/2020/Project.toml`\n",
-      " \u001b[90m [6e4b80f9]\u001b[39m\u001b[37m BenchmarkTools v0.5.0\u001b[39m\n",
-      " \u001b[90m [31c24e10]\u001b[39m\u001b[37m Distributions v0.23.10\u001b[39m\n",
-      " \u001b[90m [c91e804a]\u001b[39m\u001b[37m Gadfly v1.3.0\u001b[39m\n",
-      " \u001b[90m [bd48cda9]\u001b[39m\u001b[37m GraphRecipes v0.5.4\u001b[39m\n",
-      " \u001b[90m [47be7bcc]\u001b[39m\u001b[37m ORCA v0.5.0\u001b[39m\n",
-      " \u001b[90m [a03496cd]\u001b[39m\u001b[37m PlotlyBase v0.4.1\u001b[39m\n",
-      " \u001b[90m [f0f68f2c]\u001b[39m\u001b[37m PlotlyJS v0.14.0\u001b[39m\n",
-      " \u001b[90m [91a5bcdd]\u001b[39m\u001b[37m Plots v1.6.1\u001b[39m\n",
-      " \u001b[90m [438e738f]\u001b[39m\u001b[37m PyCall v1.91.4\u001b[39m\n",
-      " \u001b[90m [d330b81b]\u001b[39m\u001b[37m PyPlot v2.9.0\u001b[39m\n",
-      " \u001b[90m [6f49c342]\u001b[39m\u001b[37m RCall v0.13.7\u001b[39m\n",
-      " \u001b[90m [8f399da3]\u001b[39m\u001b[37m Libdl \u001b[39m\n",
-      " \u001b[90m [10745b16]\u001b[39m\u001b[37m Statistics \u001b[39m\n"
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/Dropbox/class/M1399.000200/2021/M1399_000200-2021fall/Project.toml`\n",
+      " \u001b[90m [7d9fca2a] \u001b[39mArpack v0.5.3\n",
+      " \u001b[90m [6e4b80f9] \u001b[39mBenchmarkTools v1.1.4\n",
+      " \u001b[90m [1e616198] \u001b[39mCOSMO v0.8.1\n",
+      " \u001b[90m [f65535da] \u001b[39mConvex v0.14.13\n",
+      " \u001b[90m [a93c6f00] \u001b[39mDataFrames v1.2.2\n",
+      " \u001b[90m [31a5f54b] \u001b[39mDebugger v0.6.8\n",
+      " \u001b[90m [31c24e10] \u001b[39mDistributions v0.24.18\n",
+      " \u001b[90m [e2685f51] \u001b[39mECOS v0.12.3\n",
+      " \u001b[90m [f6369f11] \u001b[39mForwardDiff v0.10.19\n",
+      " \u001b[90m [28b8d3ca] \u001b[39mGR v0.58.1\n",
+      " \u001b[90m [c91e804a] \u001b[39mGadfly v1.3.3\n",
+      " \u001b[90m [bd48cda9] \u001b[39mGraphRecipes v0.5.7\n",
+      " \u001b[90m [82e4d734] \u001b[39mImageIO v0.5.8\n",
+      " \u001b[90m [6218d12a] \u001b[39mImageMagick v1.2.1\n",
+      " \u001b[90m [916415d5] \u001b[39mImages v0.24.1\n",
+      " \u001b[90m [b6b21f68] \u001b[39mIpopt v0.7.0\n",
+      " \u001b[90m [42fd0dbc] \u001b[39mIterativeSolvers v0.9.1\n",
+      " \u001b[90m [4076af6c] \u001b[39mJuMP v0.21.9\n",
+      " \u001b[90m [b51810bb] \u001b[39mMatrixDepot v1.0.4\n",
+      " \u001b[90m [1ec41992] \u001b[39mMosekTools v0.9.4\n",
+      " \u001b[90m [76087f3c] \u001b[39mNLopt v0.6.3\n",
+      " \u001b[90m [47be7bcc] \u001b[39mORCA v0.5.0\n",
+      " \u001b[90m [a03496cd] \u001b[39mPlotlyBase v0.4.3\n",
+      " \u001b[90m [f0f68f2c] \u001b[39mPlotlyJS v0.15.0\n",
+      " \u001b[90m [91a5bcdd] \u001b[39mPlots v1.21.2\n",
+      " \u001b[90m [438e738f] \u001b[39mPyCall v1.92.3\n",
+      " \u001b[90m [d330b81b] \u001b[39mPyPlot v2.9.0\n",
+      " \u001b[90m [dca85d43] \u001b[39mQuartzImageIO v0.7.3\n",
+      " \u001b[90m [6f49c342] \u001b[39mRCall v0.13.12\n",
+      " \u001b[90m [ce6b1742] \u001b[39mRDatasets v0.7.5\n",
+      " \u001b[90m [c946c3f1] \u001b[39mSCS v0.7.1\n",
+      " \u001b[90m [276daf66] \u001b[39mSpecialFunctions v1.6.1\n",
+      " \u001b[90m [2913bbd2] \u001b[39mStatsBase v0.33.10\n",
+      " \u001b[90m [b8865327] \u001b[39mUnicodePlots v2.0.1\n",
+      " \u001b[90m [0f1e0344] \u001b[39mWebIO v0.8.15\n",
+      " \u001b[90m [8f399da3] \u001b[39mLibdl\n",
+      " \u001b[90m [2f01184e] \u001b[39mSparseArrays\n",
+      " \u001b[90m [10745b16] \u001b[39mStatistics\n"
      ]
     }
    ],
@@ -94,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "3×3 Array{Float64,2}:\n",
+       "3×3 Matrix{Float64}:\n",
        " 2.0  -4.0  2.0\n",
        " 4.0  -9.0  7.0\n",
        " 2.0   1.0  3.0"
@@ -117,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Float64,1}:\n",
+       "3-element Vector{Float64}:\n",
        "  6.0\n",
        " 20.0\n",
        " 14.0"
@@ -140,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Float64,1}:\n",
+       "3-element Vector{Float64}:\n",
        " 2.000000000000001\n",
        " 1.0\n",
        " 2.9999999999999996"
@@ -219,18 +244,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       "  1.0  0.0  0.0\n",
+       " -2.0  1.0  0.0\n",
+       "  0.0  0.0  1.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "E21 = [1.0 0.0 0.0; -2.0 1.0 0.0; 0.0 0.0 1.0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 2.0  -4.0  2.0\n",
+       " 0.0  -1.0  3.0\n",
+       " 2.0   1.0  3.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# zero (2, 1) entry\n",
     "E21 * A   # Step 1, A'"
@@ -238,18 +291,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       "  1.0  0.0  0.0\n",
+       "  0.0  1.0  0.0\n",
+       " -1.0  0.0  1.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "E31 = [1.0 0.0 0.0; 0.0 1.0 0.0; -1.0 0.0 1.0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 2.0  -4.0  2.0\n",
+       " 0.0  -1.0  3.0\n",
+       " 0.0   5.0  1.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# zero (3, 1) entry\n",
     "E31 * E21 * A  # Step 2, A''"
@@ -264,18 +345,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 1.0  0.0  0.0\n",
+       " 0.0  1.0  0.0\n",
+       " 0.0  5.0  1.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "E32 = [1.0 0.0 0.0; 0.0 1.0 0.0; 0.0 5.0 1.0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 2.0  -4.0   2.0\n",
+       " 0.0  -1.0   3.0\n",
+       " 0.0   0.0  16.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# zero (3, 2) entry\n",
     "E32 * E31 * E21 * A   # Step 3, A'''"
@@ -313,18 +422,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       "  1.0  0.0  0.0\n",
+       " -2.0  1.0  0.0\n",
+       " -1.0  0.0  1.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "M1 = E31 * E21   # inv(L2 * L1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 1.0  0.0  0.0\n",
+       " 0.0  1.0  0.0\n",
+       " 0.0  5.0  1.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "M2 = E32    # inv(L3)"
    ]
@@ -348,18 +485,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 1.0  0.0  0.0\n",
+       " 2.0  1.0  0.0\n",
+       " 1.0  0.0  1.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "inv(M1)    # L2 * L1. inv(A) give the inverse of A, but use with caution (see below)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 1.0   0.0  0.0\n",
+       " 0.0   1.0  0.0\n",
+       " 0.0  -5.0  1.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "inv(M2)    # L3"
    ]
@@ -606,18 +771,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 2.0  -4.0  2.0\n",
+       " 4.0  -9.0  7.0\n",
+       " 2.0   1.0  3.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LU{Float64, Matrix{Float64}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using LinearAlgebra\n",
     "\n",
@@ -628,72 +818,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(:factors, :ipiv, :info)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fieldnames(typeof(alu))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 1.0  0.0        0.0\n",
+       " 0.5  1.0        0.0\n",
+       " 0.5  0.0909091  1.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alu.L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 4.0  -9.0   7.0\n",
+       " 0.0   5.5  -0.5\n",
+       " 0.0   0.0  -1.45455"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alu.U"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 2\n",
+       " 3\n",
+       " 1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alu.p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 0.0  1.0  0.0\n",
+       " 0.0  0.0  1.0\n",
+       " 1.0  0.0  0.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alu.P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 4.0  -9.0  7.0\n",
+       " 2.0   1.0  3.0\n",
+       " 2.0  -4.0  2.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alu.L * alu.U"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 4.0  -9.0  7.0\n",
+       " 2.0   1.0  3.0\n",
+       " 2.0  -4.0  2.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A[alu.p, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 2.000000000000001\n",
+       " 1.0\n",
+       " 2.9999999999999996"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# this is doing two triangular solves, 2n^2 flops\n",
     "alu \\ b"
@@ -701,36 +1000,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-32.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "det(A) # this does LU!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-32.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "det(alu) # this is cheap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       "  1.0625  -0.4375  0.3125\n",
+       " -0.0625  -0.0625  0.1875\n",
+       " -0.6875   0.3125  0.0625"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "inv(A) # this does LU!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       "  1.0625  -0.4375  0.3125\n",
+       " -0.0625  -0.0625  0.1875\n",
+       " -0.6875   0.3125  0.0625"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "inv(alu) # this is cheap"
    ]
@@ -766,15 +1115,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.6.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.6.2"
   },
   "toc": {
    "colors": {
